--- a/app/src/main/res/layout/activity_ghabz_search.xml
+++ b/app/src/main/res/layout/activity_ghabz_search.xml
@@ -117,7 +117,7 @@
                 android:id="@+id/lay_eshterak_search"
                 android:layout_width="match_parent"
                 android:layout_height="75dp"
-                android:visibility="visible"
+                android:visibility="gone"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
@@ -177,7 +177,7 @@
                 android:id="@+id/lay_ghabz_search"
                 android:layout_width="match_parent"
                 android:layout_height="75dp"
-                android:visibility="gone"
+                android:visibility="visible"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
@@ -189,7 +189,7 @@
                     android:id="@+id/lbl_ghabz"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="شناسه قبض :"
+                    android:text="کد ملی :"
                     android:textColor="@android:color/black"
                     android:textSize="20sp"
                     app:layout_constraintBottom_toBottomOf="parent"
@@ -221,7 +221,7 @@
                     android:height="35dp"
                     android:background="@drawable/style_editview"
                     android:gravity="center_vertical|start"
-                    android:hint="شناسه قبض را وارد کنید"
+                    android:hint="لطفا کدملی را وارد کنید"
 
                     android:inputType="text"
                     android:paddingStart="10dp"
@@ -891,7 +891,7 @@
             android:visibility="gone">
 
             <LinearLayout
-                android:id="@+id/linearLayout"
+                android:id="@+id/lay_header_bussiness"
                 android:layout_width="match_parent"
                 android:layout_height="25dp"
                 android:orientation="horizontal"
@@ -1010,7 +1010,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="1.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/linearLayout"
+                app:layout_constraintTop_toBottomOf="@+id/lay_header_bussiness"
                 app:layout_constraintVertical_bias="0.0" />
 
             <LinearLayout
