--- a/app/src/main/res/layout/activity_select_avarez_type.xml
+++ b/app/src/main/res/layout/activity_select_avarez_type.xml
@@ -369,7 +369,7 @@
                     android:background="#a1a1a1"
                     android:clickable="true"
                     android:gravity="center"
-                    android:onClick="clk_under_cunstruct"
+                    android:onClick="clk_nosazi_avarez"
                     android:orientation="horizontal"
                     android:paddingBottom="5dp">
 
