--- a/app/src/main/res/layout/app_bar_drawer_test.xml
+++ b/app/src/main/res/layout/app_bar_drawer_test.xml
@@ -23,7 +23,7 @@
                 android:id="@+id/toolbar_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="نرم افزار پرداخت الکترونیک"
+                android:text="@string/app_name"
                 android:textColor="@android:color/black" />
         </android.support.v7.widget.Toolbar>
 
