--- a/app/src/main/res/layout/list_pasmand_item.xml
+++ b/app/src/main/res/layout/list_pasmand_item.xml
@@ -88,7 +88,7 @@
             android:orientation="horizontal">
 
             <com.sputa.avarez.my_views.MyTextView
-                android:id="@+id/txt_tax"
+                android:id="@+id/txt_type"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_margin="0dp"
@@ -98,7 +98,7 @@
                 android:background="@drawable/border_back"
                 android:gravity="center"
                 android:padding="0dp"
-                android:text="مالیات"
+                android:text="نوع واحد"
                 android:textColor="@android:color/black"
                 android:textSize="12sp" />
         </LinearLayout>
@@ -110,7 +110,7 @@
             android:orientation="horizontal">
 
             <com.sputa.avarez.my_views.MyTextView
-                android:id="@+id/txt_punishment"
+                android:id="@+id/txt_unit"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_margin="0dp"
@@ -119,11 +119,31 @@
                 android:background="@drawable/border_back"
                 android:gravity="center"
                 android:padding="0dp"
-                android:text="مبلغ جریمه"
+                android:text="تعداد واحد"
                 android:textColor="@android:color/black"
                 android:textSize="12sp" />
         </LinearLayout>
 
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:orientation="horizontal">
+
+            <com.sputa.avarez.my_views.MyTextView
+                android:id="@+id/txt_debit"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_margin="0dp"
+                android:layout_marginBottom="8dp"
+                android:layout_marginTop="8dp"
+                android:background="@drawable/border_back"
+                android:gravity="center"
+                android:padding="0dp"
+                android:text="بدهی"
+                android:textColor="@android:color/black"
+                android:textSize="12sp" />
+        </LinearLayout>
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
