--- a/app/src/main/res/layout/list_pay_history.xml
+++ b/app/src/main/res/layout/list_pay_history.xml
@@ -47,10 +47,9 @@
             android:orientation="horizontal">
 
             <ImageView
-                android:id="@+id/img_car_icon"
+                android:id="@+id/img_icon"
                 android:layout_width="45dp"
-                android:layout_height="45dp"
-                app:srcCompat="@drawable/car" />
+                android:layout_height="45dp" />
         </LinearLayout>
 
         <LinearLayout
